--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 bin/*
-dataset/*
-dataset2/*
+dataset/Audio/*
+dataset/Videos/*
+dataset/Ads/*.rgb
+dataset2/Videos/*
+dataset2/Ads/*.rgb
 .classpath
 .project
 .settings/*
